mobile overflow solved

--- a/src/App.css
+++ b/src/App.css
@@ -52,4 +52,5 @@ hr {
   border-top: 1px solid #ccc;
   margin: 1em 0;
   padding: 0;
+  overflow: hidden;
 }
