--- a/src/components/Introduction.css
+++ b/src/components/Introduction.css
@@ -51,12 +51,13 @@
       font-size: medium;
     }
     .axis-horizontal {
-      height: 80vh;
-      /* max-width: 400px; */
+      height: auto;
+      /* max-width: 00px; */
       /* display: none; */
     }
     #img-1{
       height: 80vh;
+      overflow: hidden;
     }
     
     #img-2{
